--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
     "json-server": "^1.0.0-beta.3",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.542.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.2",
     "react-webcam": "^7.2.0",
     "tailwindcss": "^4.1.12"
