--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "axios": "^1.11.0",
     "json-server": "^1.0.0-beta.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.542.0",
