--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "json-server --watch db.json --port 5000"
+    "server": "json-server --watch db.json --port 3000 --host 0.0.0.0"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
@@ -16,12 +16,17 @@
     "json-server": "^1.0.0-beta.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.542.0",
+    "pwa-asset-generator": "^8.1.1",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.2",
     "react-webcam": "^7.2.0",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "tw-animate-css": "^1.3.8",
+    "workbox-precaching": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
